[dev] add mobile navigation, fix header items alignment

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,8 +2,8 @@
 @import "typography";
 @import "colors";
 @import "utils";
-
-$tablet-breakpoint: 1070px;
+$mobile-breakpoint: 768px;
+$tablet-breakpoint: 770px;
 $formula: 1600 - 1615;
 $value: #{$formula}vw;
 
@@ -14,7 +14,7 @@ $value: #{$formula}vw;
   width: 100%;
   & > li {
     flex: 0 1 $basis;
-    // TODO : assign padding to some variable and change it to some normalized value across the page
+
     padding: 10px;
     margin-bottom: $gap-m;
   }
@@ -37,9 +37,13 @@ $value: #{$formula}vw;
 
 body {
   overflow-x: hidden;
+  position: relative;
 }
 
-header {
+.no-vertical-overflow {
+  overflow-y: hidden;
+}
+.header {
   padding: 1.5vmax $horizontal-padding;
   position: absolute;
   z-index: 3;
@@ -47,24 +51,69 @@ header {
   left: 0;
   width: 100%;
   background-color: $color-white;
+  display: flex;
+  align-items: center;
+  &-menu-button {
+    display: none;
+  }
   @media (max-width: $tablet-breakpoint) {
     padding-top: 3vmax;
     padding-bottom: 3vmax;
+    &-menu-button {
+      display: block;
+    }
   }
 }
 
 .navigation {
-  //font-size: 0.9rem;
   color: $color-gray;
   width: 70%;
-  & > ul {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  &-list {
     width: 50%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+    margin: 0;
   }
   @media (max-width: $tablet-breakpoint) {
     display: none;
   }
 }
-
+.mobile-navigation {
+  position: fixed;
+  top: 2rem;
+  opacity: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  z-index: 2;
+  transition: all 0.3s;
+  background-color: rgba(0, 0, 0, 0.5);
+  &-list {
+    position: absolute;
+    top: 5rem;
+    height: 20rem;
+    margin-top: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    background-color: white;
+    padding: 2rem 1rem;
+    width: 90%;
+    border-radius: 10px;
+  }
+}
+.mobile-navigation--active {
+  opacity: 1;
+}
 .navigation-anchor {
   position: relative;
   padding: 10px 0;
